--- a/FaceTrain/FaceTrain/Info.plist
+++ b/FaceTrain/FaceTrain/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string> aaa</string>
     <key>NSCameraUsageDescription</key>
     <string>$(PRODUCT_NAME) uses camera for train eigen faces</string>
 	<key>CFBundleDevelopmentRegion</key>
